# rust-starter

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  TEMPLATE.md  cargo-generate.toml  deny.toml
.cargo/: config.toml
.claude/: settings.json
.claude/scripts/: setup.sh
.claude/skills/team/: SKILL.md
.config/: nextest.toml
.github/: dependabot.yml  sync-template-files
.github/workflows/: ci.yml  claude-ci-fix.yml  sync-template.yml  template-test.yml
scripts/: install-hooks.sh  post-edit-check.sh  pre-commit  pre-commit-check.sh
src/: error.rs  lib.rs  main.rs
tests/: integration_test.rs
