[package]
name = "{{project-name}}"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "{{description}}"
license = "MIT"
repository = "https://github.com/ogghead/{{project-name}}"
publish = false

[dependencies]
miette = { version = "7", features = ["fancy"] }
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
pretty_assertions = "1"
insta = { version = "1", features = ["yaml"] }

[profile.dev]
split-debuginfo = "unpacked"

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
panic = "abort"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
# Pedantic relaxations - these fire too often and reduce signal
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
# Nursery relaxation - not yet stable
option_if_let_else = "allow"
# Integration tests live in tests/ and are correctly outside #[cfg(test)] modules
tests_outside_test_module = "allow"

# === Restriction lints (opt-in, strictest quality) ===

# Panic prevention (forbid) — no panicking code, period
unwrap_used = "forbid"
expect_used = "forbid"
unwrap_in_result = "forbid"
get_unwrap = "forbid"
panic = "forbid"
todo = "forbid"
unimplemented = "forbid"
unreachable = "forbid"
indexing_slicing = "warn"

# Debug artifacts (forbid) — nothing left in release code
dbg_macro = "forbid"
print_stdout = "forbid"
print_stderr = "forbid"
use_debug = "forbid"

# Shadowing (warn) — flag all rebinding
shadow_reuse = "warn"
shadow_same = "warn"
shadow_unrelated = "warn"

# Error handling quality (warn)
map_err_ignore = "warn"
missing_assert_message = "warn"
try_err = "warn"
error_impl_error = "warn"

# Type safety and conversions (warn)
as_conversions = "warn"
lossy_float_literal = "warn"
float_cmp_const = "warn"
integer_division = "warn"
arithmetic_side_effects = "warn"

# Code hygiene (warn)
wildcard_imports = "warn"
empty_structs_with_brackets = "warn"
pub_without_shorthand = "warn"
large_stack_frames = "warn"
clone_on_ref_ptr = "warn"
multiple_inherent_impl = "warn"
string_add = "warn"
str_to_string = "warn"
implicit_clone = "warn"
format_push_string = "warn"
verbose_file_reads = "warn"
exit = "warn"
mem_forget = "warn"
rest_pat_in_fully_bound_structs = "warn"
same_name_method = "warn"
rc_buffer = "warn"
rc_mutex = "warn"
empty_drop = "warn"
if_then_some_else_none = "warn"
let_underscore_must_use = "warn"
missing_docs_in_private_items = "warn"
undocumented_unsafe_blocks = "warn"
unnecessary_safety_comment = "warn"
unnecessary_safety_doc = "warn"
