[package]
name = "{{project-name}}"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "{{description}}"
license = "MIT"
repository = "https://github.com/ogghead/{{project-name}}"
publish = false

[dependencies]
miette = { version = "7", features = ["fancy"] }
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
pretty_assertions = "1"
insta = { version = "1", features = ["yaml"] }

[profile.dev]
split-debuginfo = "unpacked"

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
panic = "abort"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
# Pedantic relaxations - these fire too often and reduce signal
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
# Nursery relaxation - not yet stable
option_if_let_else = "allow"
# Integration tests live in tests/ and are correctly outside #[cfg(test)] modules
tests_outside_test_module = "allow"

# === Restriction lints (opt-in, strictest quality) ===

# Panic prevention (deny) — no panicking code
# Note: using deny (not forbid) because some derive macros (e.g. clap)
# emit #[allow(clippy::restriction)] which is incompatible with forbid.
unwrap_used = "deny"
expect_used = "deny"
unwrap_in_result = "deny"
get_unwrap = "deny"
panic = "deny"
todo = "deny"
unimplemented = "deny"
unreachable = "deny"
indexing_slicing = "deny"

# Debug artifacts (deny) — nothing left in release code
dbg_macro = "deny"
print_stdout = "deny"
print_stderr = "deny"
use_debug = "deny"

# Shadowing (deny) — flag all rebinding
shadow_reuse = "deny"
shadow_same = "deny"
shadow_unrelated = "deny"

# Error handling quality (deny)
map_err_ignore = "deny"
missing_assert_message = "deny"
try_err = "deny"
error_impl_error = "deny"

# Type safety and conversions (deny)
as_conversions = "deny"
lossy_float_literal = "deny"
float_cmp_const = "deny"
integer_division = "deny"
arithmetic_side_effects = "deny"

# Code hygiene (deny)
wildcard_imports = "deny"
empty_structs_with_brackets = "deny"
pub_without_shorthand = "deny"
large_stack_frames = "deny"
clone_on_ref_ptr = "deny"
multiple_inherent_impl = "deny"
string_add = "deny"
str_to_string = "deny"
implicit_clone = "deny"
format_push_string = "deny"
verbose_file_reads = "deny"
exit = "deny"
mem_forget = "deny"
rest_pat_in_fully_bound_structs = "deny"
same_name_method = "deny"
rc_buffer = "deny"
rc_mutex = "deny"
empty_drop = "deny"
if_then_some_else_none = "deny"
let_underscore_must_use = "deny"
missing_docs_in_private_items = "deny"
undocumented_unsafe_blocks = "deny"
unnecessary_safety_comment = "deny"
unnecessary_safety_doc = "deny"
